--- a/Example1.ipynb
+++ b/Example1.ipynb
@@ -12,13 +12,12 @@
     "\n",
     "A simple Raoult's Law Model is used to produce the thermodynamic equilibrium data for this mixture.\n",
     "\n",
-    "The Reflux Ratio must be greater than a minimum value for a feasible separation.  This demo will show that if the Reflux Ration is too low, the rectifying and stripping operating lines will not intersect beneath the Equilibrium Curve.\n",
-    "\n"
+    "The Reflux Ratio must be greater than a minimum value for a feasible separation.  This demo will show that if the Reflux Ration is too low, the rectifying and stripping operating lines will not intersect beneath the Equilibrium Curve."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -35,12 +34,8 @@
     "from src.distillation.DistillationBinary import DistillationModelBinary\n",
     "from src.utils.AntoineEquation import * \n",
     "from IPython.display import clear_output\n",
-    "from tqdm import tqdm\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
     "from ipywidgets import interactive, Button, VBox, HBox, Output\n",
-    "from IPython.display import clear_output\n",
-    "import matplotlib.pyplot as plt\n"
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -52,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,51 +68,85 @@
     "toluene_antoine = AntoineEquationBase10(Tol_A, Tol_B, Tol_C)\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = RaoultsLawModel(2, P_sys, [\"Benzene\", \"Toluene\"], [benzene_antoine, toluene_antoine])\n"
+    "vle_model = RaoultsLawModel(2, P_sys, [\"Benzene\", \"Toluene\"], [benzene_antoine, toluene_antoine])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the sliders:\n",
-    "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB1_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-1, max=1, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
-    "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
-    "\n",
-    "def plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
-    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
-    "    distillation_model = DistillationModelBinary(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
+    "def plot_distil_oplines_ex1(dist_model, xD, xB, R):\n",
+    "    \n",
+    "    dist_model.set_xD(np.array([xD, 1 - xD]))\n",
+    "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
+    "    dist_model.set_r(R)\n",
+    "    \n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 4.5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    \n",
     "    distillation_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
     "    distillation_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
     "    distillation_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
+    "    \n",
     "    plt.subplots_adjust(wspace=0.25)\n",
     "    plt.subplots_adjust(hspace=0)\n",
+    "    #plt.tight_layout()\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
     "\n",
-    "def plot_distil_stripping_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
-    "    plt.close('all')  # Ensure that any existing figures are closed.\n",
+    "def plot_distil_stripping_ex1(dist_model, xD, xB, R):\n",
+    "    \n",
     "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
+    "    \n",
+    "    dist_model.set_xD(np.array([xD, 1 - xD]))\n",
+    "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
+    "    dist_model.set_r(R)\n",
+    "\n",
     "    distillation_model.plot_distil_strip_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.tight_layout()\n",
     "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
     "\n",
-    "def plot_distil_rectifying_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
-    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
-    "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
+    "def plot_distil_rectifying_ex1(dist_model, xD, xB, R):\n",
+    "    #plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
+    "    \n",
+    "    dist_model.set_xD(np.array([xD, 1 - xD]))\n",
+    "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
+    "    dist_model.set_r(R)\n",
+    "    \n",
     "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    distillation_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
-    "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()  # Ensure the plot is displayed in Jupyter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the sliders for user interaction:\n",
+    "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
+    "xB1_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
+    "R1_slider  = widgets.FloatLogSlider(value=1.0, base=10, min=-1, max=1, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "go_button  = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "\n",
-    "out_strip = Output()\n",
-    "out_rect = Output()\n",
+    "out_strip   = Output()\n",
+    "out_rect    = Output()\n",
     "out_oplines = Output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a distillation column model\n",
+    "\n",
+    "distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([0.99, 0.01]), xB=np.array([0.001, 0.999]), reflux=2)"
    ]
   },
   {
@@ -136,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c472a36bdcae412bb399ee5a41615948",
+       "model_id": "5a00911169954afd92de78f8011ca50f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,14 +188,13 @@
     "    with out_strip:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_distil_stripping_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
+    "        plot_distil_stripping_ex1(distillation_model, xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
     "\n",
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
     "\n",
     "layout = VBox([HBox([xB1_slider, R1_slider]), go_button, out_strip])\n",
-    "display(layout)\n",
-    "\n"
+    "display(layout)"
    ]
   },
   {
@@ -176,7 +204,7 @@
     "### Demo 2: Rectifying Line\n",
     "\n",
     "##### The Rectifying Operating Line (green line) is defined by the set values for Reflux Ratio and Distillate Composition:\n",
-    "##### $y_{n+1} = [\\frac{R}{R+1}]x_n + \\frac{x_D}{R+1}$\n",
+    "##### $y_{n+1} = \\left [ \\frac{R}{R+1} \\right ]x_n + \\frac{x_D}{R+1}$\n",
     "##### An infinite number of stages are needed as the rectifying line approaches the Equilibrium Curve (blue curve). This results in a 'Fixed Point.' The blue circles on the x-axis show that despite infinitely many equilibrium stages, the concentration cannot move past this point.\n",
     "\n",
     "##### This graph also includes dashed gray lines, depicting the McCabe-Thiele graphical method for calculating the equilibrium stage compositions.\n",
@@ -186,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32f368e4658348ba862c2c638f6c4a92",
+       "model_id": "cb2fa75d11024af393f3085b148a916b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,14 +234,14 @@
    ],
    "source": [
     "# Create your interactive widget but don't display it\n",
-    "rect_plot = interactive(plot_distil_rectifying_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
+    "#rect_plot = interactive(plot_distil_rectifying_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
     "\n",
     "# Define your button click behavior\n",
     "def on_rect_button_click(b):\n",
     "    with out_rect:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_distil_rectifying_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
+    "        plot_distil_rectifying_ex1(distillation_model, xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
     "\n",
     "rect_button = Button(description='Generate Plot')\n",
     "rect_button.on_click(on_rect_button_click)\n",
@@ -238,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "155b576c30e249488dabaf724839fc1b",
+       "model_id": "b2fffbefd90b452d94b229f99aed3cba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,21 +286,30 @@
    ],
    "source": [
     "# Create your interactive widget but don't display it\n",
-    "oplines_plot = interactive(plot_distil_oplines_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
+    "#oplines_plot = interactive(plot_distil_oplines_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
     "\n",
     "# Define your button click behavior\n",
     "def on_oplines_button_click(b):\n",
     "    with out_oplines:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
+    "        plot_distil_oplines_ex1(distillation_model, xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
     "\n",
     "oplines_button = Button(description='Generate Plots')\n",
     "oplines_button.on_click(on_oplines_button_click)\n",
     "\n",
-    "layout_oplines = VBox([HBox(oplines_plot.children[:-1]), oplines_button, out_oplines])\n",
-    "display(layout_oplines)\n"
+    "#layout_oplines = VBox([HBox(oplines_plot.children[:-1]), oplines_button, out_oplines])\n",
+    "layout = VBox([HBox([xD1_slider, xB1_slider, R1_slider]), oplines_button, out_oplines])\n",
+    "\n",
+    "display(layout)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -292,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
