--- a/Example1.ipynb
+++ b/Example1.ipynb
@@ -17,20 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "## IMPORT NECESSARY LIBRARIES ## \n",
+    "import sys\n",
+    "sys.path.insert(0, 'src/')\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "from src.thermo_models.RaoultsLawModel import *\n",
-    "from src.distillation.DistillationModel import DistillationModel\n",
     "from src.distillation.DistillationBinary import DistillationModelBinary\n",
     "from src.utils.AntoineEquation import * \n",
     "from IPython.display import clear_output\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a00911169954afd92de78f8011ca50f",
+       "model_id": "b94914cc12f84c8bb6352c1970f3b380",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb2fa75d11024af393f3085b148a916b",
+       "model_id": "1b0275d37f4846928c59dcf6d7bb060a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -266,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2fffbefd90b452d94b229f99aed3cba",
+       "model_id": "830ef3ba889f4f82b9a13fd553fedc97",
        "version_major": 2,
        "version_minor": 0
       },
