--- a/Example1.ipynb
+++ b/Example1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +86,9 @@
     "    \n",
     "    fig, axs = plt.subplots(2, 3, figsize=(15, 4.5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    \n",
-    "    distillation_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
-    "    distillation_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
-    "    distillation_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
+    "    dist_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
+    "    dist_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
+    "    dist_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
     "    \n",
     "    plt.subplots_adjust(wspace=0.25)\n",
     "    plt.subplots_adjust(hspace=0)\n",
@@ -103,7 +103,7 @@
     "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
     "    dist_model.set_r(R)\n",
     "\n",
-    "    distillation_model.plot_distil_strip_binary(ax=axs[0], ax_fixed=axs[1])\n",
+    "    dist_model.plot_distil_strip_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.tight_layout()\n",
     "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
@@ -116,7 +116,7 @@
     "    dist_model.set_r(R)\n",
     "    \n",
     "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    distillation_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
+    "    dist_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.tight_layout()\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter."
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b94914cc12f84c8bb6352c1970f3b380",
+       "model_id": "279303bcb7a34760bd4ab1fe452d6f50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b0275d37f4846928c59dcf6d7bb060a",
+       "model_id": "833f7f97ce3e452ea8eade0b33bd5491",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "830ef3ba889f4f82b9a13fd553fedc97",
+       "model_id": "80a68227ec72472abca2d998fb4c357d",
        "version_major": 2,
        "version_minor": 0
       },
