--- a/Example4.ipynb
+++ b/Example4.ipynb
@@ -21,8 +21,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
+    "\n",
     "from src.thermo_models.RaoultsLawModel import *\n",
     "from src.distillation.DistillationModel import DistillationModel\n",
     "from src.utils.AntoineEquation import * \n",
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,58 +73,71 @@
     "H2O_C = -198.043\n",
     "\n",
     "#Antoine Equations \n",
-    "Acet_antoine = AE.AntoineEquationBase10(Acet_A, Acet_B, Acet_C)\n",
-    "H2O_antoine = AE.AntoineEquationBase10(H2O_A, H2O_B, H2O_C)\n",
-    "Methanol_antoine = AE.AntoineEquationBase10(Me_A, Me_B, Me_C)\n",
-    "\n",
-    "vle_model = MargulesModel(3,1,A_,[\"Acet\", \"Meth\",\"H2O\"],[Acet_antoine, Methanol_antoine, H2O_antoine], True)"
+    "Acet_antoine     = AntoineEquationBase10(Acet_A, Acet_B, Acet_C)\n",
+    "H2O_antoine      = AntoineEquationBase10(H2O_A, H2O_B, H2O_C)\n",
+    "Methanol_antoine = AntoineEquationBase10(Me_A, Me_B, Me_C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "R1_slider =  widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
-    "R2_slider =  widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
-    "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
-    "out_1 = Output()\n",
-    "out_2 = Output()\n",
     "\n",
-    "def plot_rect(R = R1_slider):\n",
-    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
-    "    xF = np.array([0.3, 0.3, 0.4])\n",
-    "    xD = np.array([0.5030, 0.4960, 0.0010])\n",
-    "    xB = np.array([1e-10, 0.0103,0.9897])\n",
-    "    distillation_model = DistillationModelTernary(vle_model, xF = xF, xD = xD, xB = xB, reflux = R)\n",
+    "def plot_rect(dist_model, R):\n",
+    "    \n",
+    "    dist_model.set_xF(np.array([0.3, 0.3, 0.4]))\n",
+    "    dist_model.set_xD(np.array([0.5030, 0.4960, 0.0010]))\n",
+    "    dist_model.set_xB(np.array([1e-10, 0.0103,0.9897]))\n",
+    "    \n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
-    "    distillation_model.plot_rect_comp(ax)\n",
+    "    dist_model.plot_rect_comp(ax)\n",
+    "    \n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()\n",
     "\n",
-    "def plot_rect_strip(R = R2_slider):\n",
-    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
-    "    xF = np.array([0.3, 0.3, 0.4])\n",
-    "    xD = np.array([0.5030, 0.4960, 0.0010])\n",
-    "    xB = np.array([1e-10, 0.0103,0.9897])\n",
-    "    distillation_model = DistillationModelTernary(vle_model, xF = xF, xD = xD, xB = xB, reflux = R)\n",
-    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
-    "    distillation_model.plot_rect_strip_comp(ax)\n",
+    "def plot_rect_strip(dist_model, R):\n",
     "    \n",
-    "    # for index,point in enumerate(fixed_points['values']):\n",
-    "    #     ax.scatter(point[0], point[1], marker='x', color='black', s=100, linewidths= 10)\n",
-    "    #     if fixed_points['source_indices'][index] == 0:\n",
-    "    #         label = \"Unstable\"\n",
-    "    #     elif fixed_points['source_indices'][index] == 1:\n",
-    "    #         label = \"saddle\"\n",
-    "    #     elif fixed_points['source_indices'][index] == 2:\n",
-    "    #         label = \"stable\"\n",
-    "    #     else:\n",
-    "    #         label = \"unexpected node: error\"\n",
-    "        # ax.text(point[0], point[1], f' {label}', verticalalignment='bottom', horizontalalignment='right')\n",
+    "    dist_model.set_xF(np.array([0.3, 0.3, 0.4]))\n",
+    "    dist_model.set_xD(np.array([0.5030, 0.4960, 0.0010]))\n",
+    "    dist_model.set_xB(np.array([1e-10, 0.0103,0.9897]))\n",
+    "    \n",
+    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
+    "    dist_model.plot_rect_strip_comp(ax)\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup sliders\n",
+    "\n",
+    "R1_slider = widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R2_slider = widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
+    "\n",
+    "# Setup interactive objects\n",
+    "\n",
+    "out_1 = Output()\n",
+    "out_2 = Output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a VLE model object\n",
+    "vle_model = MargulesModel(3,1,A_,[\"Acet\", \"Meth\",\"H2O\"],[Acet_antoine, Methanol_antoine, H2O_antoine], True)\n",
+    "\n",
+    "# Create a distillation model\n",
+    "distillation_model = DistillationModelTernary(vle_model, xF = np.array([0.3, 0.3, 0.4]), xD = np.array([0.9, 0.05, 0.05]), xB = np.array([0.1, 0.3, 0.5]), reflux = 0.5)"
    ]
   },
   {
@@ -139,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42c0543837e041eb945213953592ebc9",
+       "model_id": "9782873c42b84667be08f56e085a901f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +174,7 @@
     "    with out_1:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_rect( R=R1_slider.value)\n",
+    "        plot_rect(distillation_model, R=R1_slider.value)\n",
     "        \n",
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
@@ -185,13 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eaf67ecc3204265927a1f9dc1af1a6e",
+       "model_id": "95d2e5339b3e4c5aa2071cb57c7d3e56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,11 +229,18 @@
     "layout = VBox([HBox([R2_slider, go2_button]), out_2])\n",
     "display(layout)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -235,9 +254,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.16"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
