Third round of cleanup

--- a/Example3.ipynb
+++ b/Example3.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "#### This example shows the distillation column for a mixture of Benzene and Ethylenediamine\n",
-    "#### Like Exmaple1, this is a binary mixture, with the Reflux Ratio as the primary factor determining column feasability,  However, the shape of the equilibrium cuvre leads to an additional constraint on the Reflux Ratio due at a pinch point -- a new type of Fixed Point"
+    "\n",
+    "Like Example1, this is a binary mixture, with the Reflux Ratio as the primary factor determining column feasability,  However, the shape of the equilibrium cuvre leads to an additional constraint on the Reflux Ratio due at a pinch point -- a new type of Fixed Point"
    ]
   },
   {
@@ -201,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02d9a7a96eff40c7b06586eb1b90226d",
+       "model_id": "874500d870c744e49cc2944ccc0010f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb7dfa0538fc45ff961ea7df8e6baf5b",
+       "model_id": "ceea05b58f2642889d65646c8125a793",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6bfbbcebd5a4d9ead1164e4fa8197af",
+       "model_id": "190db627af8b48e7995ff5c46f6a4c0b",
        "version_major": 2,
        "version_minor": 0
       },
