--- a/Example4.ipynb
+++ b/Example4.ipynb
@@ -10,30 +10,41 @@
     "\n",
     "In these systems, as Reflux Ratio changes, the fixed point which terminates the rectifying section changes.  However, at the tangent pinch, a very small increment in reflux ratio causes the fixed point composition to rapidly shoot to a new value. \n",
     "\n",
-    "This example shows the rectifying section experiences a major jump at this tangent pinch, which occurs at a reflux ratio between 0.1 and 0.2."
+    "This example shows the rectifying section experiences a jump at this tangent pinch, which occurs at a reflux ratio between 0.1 and 0.2."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/Anaconda/anaconda3/lib/python3.8/site-packages/scipy/__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4)\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n",
+      "/Applications/Anaconda/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from src.thermo_models.RaoultsLawModel import *\n",
-    "from src.distillation.DistillationModel import DistillationModel\n",
     "from src.utils.AntoineEquation import * \n",
     "from IPython.display import clear_output\n",
-    "from tqdm import tqdm\n",
+    "\n",
     "from src.distillation.DistillationTernary import *\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
+    "\n",
     "from ipywidgets import interactive, Button, VBox, HBox, Output\n",
     "from IPython.display import clear_output\n",
     "from src.thermo_models.MargulesModel import *\n",
-    "from src.thermo_models.WilsonModel import *\n"
+    "from src.distillation.residue_curves import *"
    ]
   },
   {
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,64 +91,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a VLE model object\n",
+    "vle_model = MargulesModel(3, P_sys, A_,[\"Acet\", \"Meth\",\"H2O\"],[Acet_antoine, Methanol_antoine, H2O_antoine], True)\n",
     "\n",
-    "def plot_rect(dist_model, R):\n",
+    "# Create a distillation model\n",
+    "distillation_model = DistillationModelTernary(vle_model, xF = np.array([0.3, 0.3, 0.4]), xD = np.array([0.5030, 0.4960, 0.0010]), xB = np.array([1e-10, 0.0103 - 1e-10,0.9897]), reflux = 0.1)\n",
+    "\n",
+    "# Create a residue curve map object\n",
+    "rcm = PhasePortraits(vle_model, distillation_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_rect(dist_model, rcm, rr):\n",
     "    \n",
-    "    dist_model.set_xF(np.array([0.3, 0.3, 0.4]))\n",
-    "    dist_model.set_xD(np.array([0.5030, 0.4960, 0.0010]))\n",
-    "    dist_model.set_xB(np.array([1e-10, 0.0103,0.9897]))\n",
+    "    dist_model.set_r(rr)    \n",
+    "    fig, ax = plt.subplots(1,2,figsize= (10,5))\n",
+    "    dist_model.plot_rect_comp(ax[0])\n",
     "    \n",
-    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
-    "    dist_model.plot_rect_comp(ax)\n",
+    "    rcm.plot_vector_field_rect (ax[1], 20)\n",
+    "    dist_model.plot_rect_comp(ax[1])\n",
     "    \n",
-    "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()\n",
     "\n",
-    "def plot_rect_strip(dist_model, R):\n",
+    "def plot_rect_strip(dist_model, rcm, rr):\n",
     "    \n",
-    "    dist_model.set_xF(np.array([0.3, 0.3, 0.4]))\n",
-    "    dist_model.set_xD(np.array([0.5030, 0.4960, 0.0010]))\n",
-    "    dist_model.set_xB(np.array([1e-10, 0.0103,0.9897]))\n",
+    "    dist_model.set_r(rr)\n",
     "    \n",
-    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
-    "    dist_model.plot_rect_strip_comp(ax)\n",
-    "    plt.subplots_adjust(hspace=0)\n",
+    "    fig, ax = plt.subplots(1,3,figsize= (15,5))\n",
+    "    dist_model.plot_rect_strip_comp(ax[0])   \n",
+    "    \n",
+    "    rcm.plot_vector_field_rect  (ax[1], 20)\n",
+    "    rcm.plot_vector_field_strip (ax[2], 20)\n",
+    "    \n",
+    "    dist_model.plot_rect_comp  (ax[1])\n",
+    "    dist_model.plot_strip_comp (ax[2])\n",
+    "\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup sliders\n",
     "\n",
-    "R1_slider = widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
-    "R2_slider = widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R1_slider = widgets.FloatSlider(value=0.1, min=0, max=1, step=0.01,  description='Reflux Ratio:', readout_format='.2f')\n",
+    "R2_slider = widgets.FloatSlider(value=0.1, min=0, max=1, step=0.01,  description='Reflux Ratio:', readout_format='.2f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "\n",
     "# Setup interactive objects\n",
     "\n",
     "out_1 = Output()\n",
     "out_2 = Output()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a VLE model object\n",
-    "vle_model = MargulesModel(3,1,A_,[\"Acet\", \"Meth\",\"H2O\"],[Acet_antoine, Methanol_antoine, H2O_antoine], True)\n",
-    "\n",
-    "# Create a distillation model\n",
-    "distillation_model = DistillationModelTernary(vle_model, xF = np.array([0.3, 0.3, 0.4]), xD = np.array([0.9, 0.05, 0.05]), xB = np.array([0.1, 0.3, 0.5]), reflux = 0.5)"
    ]
   },
   {
@@ -151,18 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9782873c42b84667be08f56e085a901f",
+       "model_id": "87957ddb0cc649628d832f56e7a6900c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=1.0, readout_format='.1f…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=1.0, step=0.01), Button(…"
       ]
      },
      "metadata": {},
@@ -174,7 +190,7 @@
     "    with out_1:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_rect(distillation_model, R=R1_slider.value)\n",
+    "        plot_rect(distillation_model, rcm, rr = R1_slider.value)\n",
     "        \n",
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
@@ -197,18 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95d2e5339b3e4c5aa2071cb57c7d3e56",
+       "model_id": "4dbd409779de40b3b174da1b04cef3ca",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=1.0, readout_format='.1f…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=1.0, step=0.01), Button(…"
       ]
      },
      "metadata": {},
@@ -221,7 +237,7 @@
     "    with out_2:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_rect_strip( R=R2_slider.value)\n",
+    "        plot_rect_strip( distillation_model, rcm, rr = R2_slider.value)\n",
     "        \n",
     "go2_button = widgets.Button(description='Generate Plot')\n",
     "go2_button.on_click(on_go2_button_click)\n",
@@ -240,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -254,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
