--- a/Example1.ipynb
+++ b/Example1.ipynb
@@ -21,7 +21,18 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/Anaconda/anaconda3/lib/python3.8/site-packages/scipy/__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4)\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n",
+      "/Applications/Anaconda/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    }
+   ],
    "source": [
     "## IMPORT NECESSARY LIBRARIES ## \n",
     "import sys\n",
@@ -84,28 +95,26 @@
     "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
     "    dist_model.set_r(R)\n",
     "    \n",
-    "    fig, axs = plt.subplots(2, 3, figsize=(15, 4.5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    fig, axs = plt.subplots(1, 3, figsize=(15, 4.5))\n",
     "    \n",
-    "    dist_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
-    "    dist_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
-    "    dist_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
-    "    \n",
-    "    plt.subplots_adjust(wspace=0.25)\n",
-    "    plt.subplots_adjust(hspace=0)\n",
-    "    #plt.tight_layout()\n",
+    "    dist_model.plot_distil_strip_binary(axs[0])\n",
+    "    dist_model.plot_distil_rect_binary(axs[1])\n",
+    "    dist_model.plot_distil_binary(axs[2])\n",
+    "        \n",
+    "    plt.tight_layout()\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
     "\n",
     "def plot_distil_stripping_ex1(dist_model, xD, xB, R):\n",
     "    \n",
-    "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    fig, axs = plt.subplots(1, 1, figsize=(7, 7))\n",
     "    \n",
     "    dist_model.set_xD(np.array([xD, 1 - xD]))\n",
     "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
     "    dist_model.set_r(R)\n",
     "\n",
-    "    dist_model.plot_distil_strip_binary(ax=axs[0], ax_fixed=axs[1])\n",
-    "    plt.subplots_adjust(hspace=0)\n",
-    "    plt.tight_layout()\n",
+    "    dist_model.plot_distil_strip_binary(ax=axs)\n",
+    "        \n",
+    "    plt.tight_layout()   \n",
     "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
     "\n",
     "def plot_distil_rectifying_ex1(dist_model, xD, xB, R):\n",
@@ -115,9 +124,10 @@
     "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
     "    dist_model.set_r(R)\n",
     "    \n",
-    "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    dist_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
-    "    plt.subplots_adjust(hspace=0)\n",
+    "    fig, axs = plt.subplots(1, 1, figsize=(7, 7))\n",
+    "    dist_model.plot_distil_rect_binary(ax=axs)\n",
+    "    \n",
+    "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter."
    ]
@@ -166,13 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "279303bcb7a34760bd4ab1fe452d6f50",
+       "model_id": "f886bc1a036f480885205c59faa6c043",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,13 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "833f7f97ce3e452ea8eade0b33bd5491",
+       "model_id": "fd12d8915b2a4454ac86d2564d8bc7cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,13 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80a68227ec72472abca2d998fb4c357d",
+       "model_id": "45841f709fca402a956a2ea31a6d8ecd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,12 +321,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
