--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -17,7 +17,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/Anaconda/anaconda3/lib/python3.8/site-packages/scipy/__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4)\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -74,9 +83,9 @@
     "H2O_C = -198.043\n",
     "\n",
     "#Antoine Equations \n",
-    "Acet_antoine = AE.AntoineEquationBase10(Acet_A, Acet_B, Acet_C)\n",
-    "H2O_antoine = AE.AntoineEquationBase10(H2O_A, H2O_B, H2O_C)\n",
-    "Methanol_antoine = AE.AntoineEquationBase10(Me_A, Me_B, Me_C)\n",
+    "Acet_antoine     = AntoineEquationBase10(Acet_A, Acet_B, Acet_C)\n",
+    "H2O_antoine      = AntoineEquationBase10(H2O_A, H2O_B, H2O_C)\n",
+    "Methanol_antoine = AntoineEquationBase10(Me_A, Me_B, Me_C)\n",
     "\n",
     "vle_model = MargulesModel(3,1,A_,[\"Acet\", \"Meth\",\"H2O\"],[Acet_antoine, Methanol_antoine, H2O_antoine], True)"
    ]
@@ -145,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75427492488948deb2a3524239e73f5c",
+       "model_id": "fc3b7ccb01d247ec9935841288ce10c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59c37bb056bf4068ba911f74f84221b7",
+       "model_id": "2aad3971a1e34d808275554caf14673c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,11 +226,18 @@
     "layout = VBox([HBox([R2_slider, go2_button]), out_2])\n",
     "display(layout)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -236,8 +252,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
