Fourth round of cleanup - Need a lot of work to clean up Example 5 - not yet completed

--- a/Example1.ipynb
+++ b/Example1.ipynb
@@ -21,18 +21,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Applications/Anaconda/anaconda3/lib/python3.8/site-packages/scipy/__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4)\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n",
-      "/Applications/Anaconda/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## IMPORT NECESSARY LIBRARIES ## \n",
     "import sys\n",
@@ -40,6 +29,8 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "from src.thermo_models.RaoultsLawModel import *\n",
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +97,7 @@
     "\n",
     "def plot_distil_stripping_ex1(dist_model, xD, xB, R):\n",
     "    \n",
-    "    fig, axs = plt.subplots(1, 1, figsize=(7, 7))\n",
+    "    fig, axs = plt.subplots(1, 1, figsize=(5, 5))\n",
     "    \n",
     "    dist_model.set_xD(np.array([xD, 1 - xD]))\n",
     "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
@@ -124,7 +115,7 @@
     "    dist_model.set_xB(np.array([xB, 1 - xB]))\n",
     "    dist_model.set_r(R)\n",
     "    \n",
-    "    fig, axs = plt.subplots(1, 1, figsize=(7, 7))\n",
+    "    fig, axs = plt.subplots(1, 1, figsize=(5, 5))\n",
     "    dist_model.plot_distil_rect_binary(ax=axs)\n",
     "    \n",
     "    \n",
@@ -134,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,13 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f886bc1a036f480885205c59faa6c043",
+       "model_id": "f3153f70cfd240ecad4c5290b9511cb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,13 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd12d8915b2a4454ac86d2564d8bc7cf",
+       "model_id": "71afde925ef1430bbaa491aab9fc7222",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,13 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45841f709fca402a956a2ea31a6d8ecd",
+       "model_id": "f63854fe8fb04b8b9181799da28e85cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,19 +312,12 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
