--- a/Example2.ipynb
+++ b/Example2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +172,14 @@
     "    dist_model.set_xD(np.array([0.990, 0.0100, 1e-10]))\n",
     "    \n",
     "    fixed_points = approximate_value(rtofixedpoints_dict,R)\n",
-    "    fig, ax = plt.subplots(1,3,figsize= (15,5))\n",
+    "    fig, ax = plt.subplots(2,2,figsize= (10,10))\n",
     "    \n",
-    "    \n",
-    "    dist_model.plot_rect_strip_comp(ax[0])\n",
+    "    dist_model.plot_rect_strip_comp(ax[0,0])\n",
     "    \n",
     "    for index,point in enumerate(fixed_points['values']):\n",
-    "        ax[0].scatter(point[0], point[1], marker='2', s=25, linewidths= 10, label = 'Fixed points')\n",
+    "        ax[0,1].scatter(point[0], point[1], marker='2', s=25, color = '#3182bd', linewidths= 10)\n",
+    "        print(point)\n",
+    "        \n",
     "        if fixed_points['source_indices'][index] == 0:\n",
     "            label = \"Unstable\"\n",
     "        elif fixed_points['source_indices'][index] == 1:\n",
@@ -187,20 +188,34 @@
     "            label = \"stable\"\n",
     "        else:\n",
     "            label = \"unexpected node: error\"\n",
-    "        ax[0].text(point[0], point[1], f' {label}', verticalalignment='bottom', horizontalalignment='right')\n",
+    "        ax[0,1].text(point[0], point[1], f' {label}', verticalalignment='bottom', horizontalalignment='right')\n",
     "    \n",
+    "    ax[0,1].hlines\n",
+    "    \n",
+    "    ax[0,1].set_xlim([-0.05,1.05])                                                                                                   \n",
+    "    ax[0,1].set_ylim([-0.05,1.05]) \n",
+    "    \n",
+    "    ax[0,1].plot([1,0], [0,1], color = 'k', linestyle='dashed') \n",
+    "    ax[0,1].hlines(0, 0, 1, colors = 'k', linestyles = 'dashed')  # dashed line                                               \n",
+    "    ax[0,1].vlines(0, 0, 1, colors = 'k', linestyles = 'dashed')  # dashed line                                               \n",
+    "    \n",
+    "    ax[0,1].set_xlabel(dist_model.thermo_model.comp_names[0], labelpad = 10)                                                        \n",
+    "    ax[0,1].set_ylabel(dist_model.thermo_model.comp_names[1], labelpad = 10) \n",
+    "        \n",
     "    #Plot Rectifying and stripping vector fields\n",
-    "    rcm.plot_vector_field_rect (ax[1], 20)\n",
-    "    rcm.plot_vector_field_strip(ax[2], 20)\n",
+    "    rcm.plot_vector_field_rect (ax[1,0], 20)\n",
+    "    rcm.plot_vector_field_strip(ax[1,1], 20)\n",
     "    \n",
-    "    dist_model.plot_rect_comp(ax[1])\n",
-    "    dist_model.plot_strip_comp(ax[2])\n",
-    "\n",
+    "    dist_model.plot_rect_comp(ax[1,0])\n",
+    "    dist_model.plot_strip_comp(ax[1,1])\n",
     "    \n",
     "    for i in ax:\n",
-    "        i.set_aspect('equal')\n",
+    "        for j in i:\n",
+    "            j.set_aspect('equal')\n",
     "\n",
     "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
     "    plt.show()\n"
    ]
   },
@@ -251,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f790bc868c5b451a8d69c0aa65a6abef",
+       "model_id": "8f072f617880459ab825cd25d84ca799",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,7 +286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4acdeda8c1ca4ab8a43435af1f4a7bf9",
+       "model_id": "08ab80bfdfd440d9ae49077384fa1b3e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee62b13c40a948d792e8f723a032f3ee",
+       "model_id": "226f7b7f55c04e7b9029ce16c3052c88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82ac2f6b7db94a97b8a93a06d38ceda7",
+       "model_id": "b7535af25ff542cabad7b462e181f1a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c02356d2e2da4445befe6259e89f7b53",
+       "model_id": "e648008e32a9406dbafff0508aa03a11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +342,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "562cfd6b23d14c8581f17cac76f58eb7",
+       "model_id": "a526644d5a6043408ab23be37aecfb84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,13 +408,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2279c5ed2214c8282d1c457db209dcf",
+       "model_id": "b2620535c45c459aaee5005ba9b15bec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,25 +692,11 @@
     "for i in ax:\n",
     "    i.set_aspect('equal')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -709,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
